# es2-saude-cardiaca-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
acompanhamento_cardiaco/: database.db  instalar_ambiente_dev_windows.bat  pyproject.toml
acompanhamento_cardiaco/acompanhamento_cardiaco/: config.py  database.py  main.py  security.py
acompanhamento_cardiaco/acompanhamento_cardiaco/auth/: auth_dependencies.py  auth_repository.py  auth_router.py  auth_schemas.py  auth_service.py  jwt_handler.py
acompanhamento_cardiaco/acompanhamento_cardiaco/measurements/: measurement_models.py  measurement_repository.py  measurement_router.py  measurement_schemas.py  measurement_service.py
acompanhamento_cardiaco/acompanhamento_cardiaco/reports/: report_router.py  report_schemas.py  report_service.py
acompanhamento_cardiaco/acompanhamento_cardiaco/users/: user_models.py  user_repository.py  user_router.py  user_schemas.py  user_service.py
acompanhamento_cardiaco/tests/auth/: test_auth_service.py
acompanhamento_cardiaco/tests/integration/: test_api.py
acompanhamento_cardiaco/tests/measurements/: test_measurement_service.py
acompanhamento_cardiaco/tests/reports/: test_report_service.py
acompanhamento_cardiaco/tests/users/: test_user_service.py
docs/: ARQUITETURA.md  CONFIGURACAO_AMBIENTE.md  CONFIGURACAO_AMBIENTE_WINDOWS.md  LINUX_ENVIRONMENT_SETUP.md  WINDOWS_ENVIRONMENT_SETUP.md
docs/postman/: API_Acompanhamento_Cardiaco_Roteiro_Apresentacao.postman_collection.json  Local_Saude_Cardiaca_Apresentacao.postman_environment.json
(+1 files in other folders)
